--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres:postgres@postgres:5432/skillmatch
+DATABASE_URL="postgres://postgres:postgres@postgres:5432/skillmatch"
