--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "dev": "node src/index.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
+    "dev": "node src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "cd backend npm init -y npm install apollo-server graphql prisma @prisma/client dotenv npx prisma init"
+  "description": "cd backend npm init -y npm install apollo-server graphql prisma @prisma/client dotenv npx prisma init",
+  "dependencies": {
+    "@prisma/client": "^6.12.0",
+    "apollo-server": "^3.13.0",
+    "dotenv": "^17.2.0",
+    "graphql": "^16.11.0",
+    "prisma": "^6.12.0"
+  }
 }
