--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,10 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tabler/icons-react": "^3.34.1",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -45,6 +49,8 @@
     "graphql": "^16.11.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.23.6",
     "next": "15.4.2",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
