--- a/backend/package.json
+++ b/backend/package.json
@@ -6,15 +6,26 @@
     "dev": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "prisma": {
+  "seed": "tsx prisma/seed.ts"
+},
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "cd backend npm init -y npm install apollo-server graphql prisma @prisma/client dotenv npx prisma init",
   "dependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@prisma/client": "^6.12.0",
     "apollo-server": "^3.13.0",
     "dotenv": "^17.2.0",
     "graphql": "^16.11.0",
     "prisma": "^6.12.0"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.15",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3"
   }
 }
