--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -23,4 +23,4 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SKILLMATCH_A3456 }}
           channelId: live
           projectId: skillmatch-a3456
-          # entryPoint: frontend
+          entryPoint: frontend
