--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "prisma": {
-  "seed": "tsx prisma/seed.ts"
+  "seed": "node prisma/seed.js"
 },
   "keywords": [],
   "author": "",
